fix selects not showing on some computers

--- a/src/Landing/landing.css
+++ b/src/Landing/landing.css
@@ -13,18 +13,6 @@ html {
   scroll-behavior: smooth;
 }
 
-@media (prefers-reduced-motion: reduce) {
-  html {
-    scroll-behavior: auto;
-  }
-  *,
-  *::before,
-  *::after {
-    animation-duration: 0.01ms !important;
-    animation-iteration-count: 1 !important;
-    transition-duration: 0.01ms !important;
-  }
-}
 
 .landing-wrapper {
   background-color: #0b0d10;
